# galaxy-scalars

./: .gitignore  .gitmodules  README.md  pyproject.toml
galscal/: geometric_features.py  read_halos.py  scalar_features.py  utils.py
galscal/jax/: __init__.py  geo.py  io.py  scalar.py
