[tool.poetry]
name = "galaxy-scalars"
version = "0.1.0"
description = ""
authors = ["Connor Hainje <cmhainje@gmail.com>"]
readme = "README.md"
packages = [
    { include = "galscal" },
    { include = "scsample" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
scipy = "^1.15.2"
astropy = "^7.0.1"
matplotlib = "^3.10.0"
h5py = "^3.13.0"
tqdm = "^4.67.1"
illustris-python = {git = "https://github.com/illustristng/illustris_python"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[virtualenvs]
in-project = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
